[gd_scene load_steps=3 format=3 uid="uid://hkpgjn7qko3l"]

[ext_resource type="Script" path="res://scripts/PasswordPuzzle/password_puzzle.gd" id="1_f3vba"]
[ext_resource type="PackedScene" uid="uid://bhwntp5nnpw16" path="res://scenes/PasswordPuzzle/password_puzzle_letter.tscn" id="2_dleo6"]

[node name="PasswordPuzzle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_f3vba")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 22

[node name="TitleContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="CanvasLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Solve the riddle - Placeholder"

[node name="SubTitle" type="Label" parent="CanvasLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
text = "Press the arrows to find the correct word - press Esc to quit"

[node name="Puzzle Items" type="HBoxContainer" parent="CanvasLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="PasswordPuzzleLetter1" parent="CanvasLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Puzzle Items" instance=ExtResource("2_dleo6")]
unique_name_in_owner = true
layout_mode = 2

[node name="PasswordPuzzleLetter2" parent="CanvasLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Puzzle Items" instance=ExtResource("2_dleo6")]
unique_name_in_owner = true
layout_mode = 2

[node name="PasswordPuzzleLetter3" parent="CanvasLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Puzzle Items" instance=ExtResource("2_dleo6")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="letter_changed" from="CanvasLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Puzzle Items/PasswordPuzzleLetter1" to="." method="_on_letter_changed"]
[connection signal="letter_changed" from="CanvasLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Puzzle Items/PasswordPuzzleLetter2" to="." method="_on_letter_changed"]
[connection signal="letter_changed" from="CanvasLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Puzzle Items/PasswordPuzzleLetter3" to="." method="_on_letter_changed"]
